30-tools/harbor/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: harbor.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-portal
                port:
                  number: 80
  tls:
    - hosts:
        - harbor.check-consulting.net
      secretName: harbor-tls
